tracker: Keep references to GrlTrackerSources in global hash table

Force the GrlTrackerSources in the grl_tracker_source_sources to stay
alive while they are in the hash table. Otherwise, due to the mismatch
between Tracker events and signalling changes to the hash table, we can
end up using finalised members from the hash table in (e.g.)
tracker_evt_update_orphan_item_cb() (I think).

https://bugzilla.gnome.org/show_bug.cgi?id=733582